# DrTrack

./: .gitignore  Environment_setup.md  README.md  README_TRACKING.md  ReadOut_dependencies  environment.yml  environment_old.yml  environment_ubuntu_22.yml  environment_windows.yml  jupyter_test.ipynb  path_file.ipynb  requirements.txt  setup.md  sweep.yaml  test.ipynb  visualize_nd2.ipynb
BioAssay-Readout/: ReadOut_Correlation  ReadOut_Nd2_readout  ReadOut_calculateIntensities
calibration_models/: large_mvt_20000.pkl  large_mvt_6000.pkl  medium_mvt_20000.pkl  medium_mvt_6000.pkl  small_1848.pkl  small_mvt_20000.pkl  small_mvt_6000.pkl
conf/: config.yaml  config_evaluate_tracking.yaml  config_track_droplets.yaml  config_visualize_all_trajectories.yaml  config_visualize_individual_trajectories.yaml  droplet_traj_visualizer.yaml  visualizer.yaml
euler/: evaluate_droplets.sh  evaluate_droplets_large.sh  evaluate_droplets_medium.sh  evaluate_droplets_small.sh  evaluate_tracking.sh  preprocess_simulations.sh  requirements.txt  setup.md  sweep.sh  sweep.yaml  test.sh  test_sweep_run.sh  track_droplets.sh
notebooks/: inspect_datastructure.ipynb  inspect_model.ipynb  inspect_patches.ipynb  verify_merge.ipynb  visualize_nd2.ipynb
src/: droplet_traj_visualizer.py  evaluate_tracking.py  evaluate_tracking_real.py  track_droplets.py  visualize_all_trajectories.py  (+3 more)
src/simulate_data/src_simulation/: CMakeLists.txt  droplet_simulation.cpp  droplet_simulation_large_mvt.cpp  droplet_simulation_medium_mvt.cpp  droplet_simulation_small_mvt.cpp  process_simulation_data.py
(+134 files in other folders)
